fixed app being visible in firewall

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ main{
     width: 100%;
     height: 100%;
     display: none;
+    position: relative;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
